<resources>
    <string name="app_name">CL05-MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="text_create_account">Si aún no tienes cuenta, regístrate aquí.</string>
    <string name="text_go_login">Si ya dispone de una cuenta, inicie sesión aquí.</string>
    <string name="btn_signup">Registrarme</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="toolbar_title_home">Inicio</string>
    <string name="hint_new_tweet_message">¿Qué esta pasando?</string>
    <string name="tweet_cancele_message">¿Desea realmente cancelar el tweet? El mensaje se eliminará</string>
    <string name="tweet_cancele_title">Cancelar Tweet</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="new_tweet_empty_error">Debe escribir un mensaje</string>
    <string name="eliminar_tweet">Eliminar Tweet</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="e_mail">E-mail</string>
    <string name="constrase_a_actual">Constraseña Actual</string>
    <string name="guardar">Guardar</string>
    <string name="modificar_contrase_a">Modificar Contraseña</string>
    <string name="website">Website</string>
    <string name="descripcion_e_intereses">Descripcion e intereses</string>
</resources>
